--- a/Criminales/src/main/resources/application.properties
+++ b/Criminales/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Criminales
 #Lo anterior esta malo
 spring.datasource.username=postgres
-spring.datasource.password=Konosubarashii2
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
